[gd_scene load_steps=6 format=3 uid="uid://subea7tfvd2a"]

[ext_resource type="Script" path="res://scenes/StartMenu.gd" id="1_dw713"]
[ext_resource type="Texture2D" uid="uid://ci2oiks6fymbj" path="res://sprites/StartBackground.png" id="2_5hl03"]
[ext_resource type="Texture2D" uid="uid://dv84o3bg1ka3v" path="res://sprites/Button Texture.png" id="3_jvpn5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wgw3r"]
texture = ExtResource("2_5hl03")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y61nr"]
texture = ExtResource("3_jvpn5")

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_dw713")

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_wgw3r")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="StartMap" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 84
theme_override_styles/normal = SubResource("StyleBoxTexture_y61nr")
text = "START MAP"

[node name="StartBattle" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 84
theme_override_styles/normal = SubResource("StyleBoxTexture_y61nr")
text = "START BATTLE"

[node name="Quit Button" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(270, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "QUIT"

[connection signal="pressed" from="Panel/VBoxContainer/StartMap" to="." method="start_map"]
[connection signal="pressed" from="Panel/VBoxContainer/StartBattle" to="." method="start_battle"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit Button" to="." method="quit_game"]
